@@ -73,83 +73,87 @@
    "provides" : {
       "Pantry" : {
          "file" : "lib/Pantry.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App" : {
          "file" : "lib/Pantry/App.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command" : {
          "file" : "lib/Pantry/App/Command.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::apply" : {
          "file" : "lib/Pantry/App/Command/apply.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::create" : {
          "file" : "lib/Pantry/App/Command/create.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::delete" : {
          "file" : "lib/Pantry/App/Command/delete.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::edit" : {
          "file" : "lib/Pantry/App/Command/edit.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::init" : {
          "file" : "lib/Pantry/App/Command/init.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::list" : {
          "file" : "lib/Pantry/App/Command/list.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::rename" : {
          "file" : "lib/Pantry/App/Command/rename.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::show" : {
          "file" : "lib/Pantry/App/Command/show.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::strip" : {
          "file" : "lib/Pantry/App/Command/strip.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::App::Command::sync" : {
          "file" : "lib/Pantry/App/Command/sync.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::Model" : {
          "file" : "lib/Pantry/Model.pm",
-         "version" : "0.007"
+         "version" : "0.008"
+      },
+      "Pantry::Model::Cookbook" : {
+         "file" : "lib/Pantry/Model/Cookbook.pm",
+         "version" : "0.008"
       },
       "Pantry::Model::Node" : {
          "file" : "lib/Pantry/Model/Node.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::Model::Pantry" : {
          "file" : "lib/Pantry/Model/Pantry.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::Model::Role" : {
          "file" : "lib/Pantry/Model/Role.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::Model::Util" : {
          "file" : "lib/Pantry/Model/Util.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::Role::Runlist" : {
          "file" : "lib/Pantry/Role/Runlist.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       },
       "Pantry::Role::Serializable" : {
          "file" : "lib/Pantry/Role/Serializable.pm",
-         "version" : "0.007"
+         "version" : "0.008"
       }
    },
    "release_status" : "stable",
@@ -164,6 +168,6 @@
          "web" : "https://github.com/dagolden/pantry"
       }
    },
-   "version" : "0.007"
+   "version" : "0.008"
 }
 
