@@ -4,7 +4,7 @@ Pantry - Configuration management tool for chef-solo
 
 =head1 VERSION
 
-version 0.007
+version 0.008
 
 =head1 SYNOPSIS
 
