@@ -6,6 +6,7 @@ use Test::More 0.92;
 
 use lib 't/lib';
 use TestHelper;
+use Path::Class;
 
 my @cases = (
   {
@@ -43,6 +44,24 @@ my @cases = (
       override_attributes => {},
     },
   },
+  {
+    label => "cookbook",
+    type => "cookbook",
+    name => 'myapp',
+    new => sub { my ($p,$n) = @_; $p->cookbook($n) },
+    tree => {
+      'README.rdoc' => undef,
+      attributes    => { 'default.rb' => undef },
+      definitions   => {},
+      files         => {},
+      libraries     => {},
+      'metadata.rb' => undef,
+      providers     => {},
+      recipes       => { 'default.rb' => undef },
+      resources     => {},
+      templates     => { 'default' => {} },
+    },
+  },
 );
 
 for my $c ( @cases ) {
@@ -56,12 +75,40 @@ for my $c ( @cases ) {
 
     ok( -e $obj->path, "$c->{type} '$c->{name}' created" );
 
-    my $data = _thaw_file( $obj->path );
+    if ( $c->{type} eq 'cookbook' ) {
+      cmp_tree( $obj->path, $c->{tree} );
+    }
+    else {
+      my $data = _thaw_file( $obj->path );
 
-    is ( delete $data->{name}, $c->{name}, "$c->{type} name set correctly in data file" );
+      is ( delete $data->{name}, $c->{name}, "$c->{type} name set correctly in data file" );
 
-    is_deeply( $data, $c->{empty}, "remaining fields correctly set for empty $c->{type}" )
-      or diag explain($data);
+      is_deeply( $data, $c->{empty}, "remaining fields correctly set for empty $c->{type}" )
+        or diag explain($data);
+    }
+  }
+}
+
+sub cmp_tree {
+  my ($path, $tree, $base) = @_;
+  $base //= $path;
+  my $children = [sort map { "$_" } dir($path)->children];
+  my $expected = [sort map { "$_" } map { dir($path, $_) } keys %$tree];
+  my $rel_path = dir($path)->relative(dir($base)->parent);
+  is_deeply( $children, $expected, "child names correct for '$rel_path'" );
+  for my $child ( keys %$tree ) {
+    if (ref ($tree->{$child}) eq 'HASH') {
+      my $obj = dir($path, $child);
+      my $rel = $obj->relative($base);
+      ok( -d $obj, "'$rel' is subdirectory"); 
+      cmp_tree(dir($path, $child), $tree->{$child}, $base)
+        if keys %{$tree->{$child}};
+    }
+    else {
+      my $obj = file($path, $child);
+      my $rel = $obj->relative($base);
+      ok( -f file($path, $child), "'$rel' is a file");
+    }
   }
 }
 
