@@ -2,6 +2,10 @@ Revision history for pantry
 
 {{$NEXT}}
 
+    [Added]
+
+    - 'pantry create' now supports creating empty cookbook boilerplate
+
 0.007     2012-08-02 19:20:08 America/New_York
 
     [Added]
